--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "dotenv": "^16.0.3",
+    "genius-lyrics": "^4.4.6",
+    "genius-lyrics-api": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.0-beta.6",
-    "react-scripts": "4.0.3",
+    "react-router": "^6.21.1",
+    "react-router-dom": "^6.21.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
